--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Joby - Progressive Web App" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
+    <meta name="theme-color" content="#4CAF50" />
+    <meta name="description" content="Find your dream job with a simple swipe - Joby makes job searching fun and easy!" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Joby" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Joby App</title>
   </head>
