Generatd a service worker registration file that registers the service worker, handles caching of static assets, and listens for updates

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Joby" />
-    <link rel="icon" href="%PUBLIC_URL%/icons/icon-72x72.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192x192.png" />
+    
+    <link rel="icon" href="%PUBLIC_URL%/icons/icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Joby App</title>
   </head>
