--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no " />
     <meta name="theme-color" content="#4CAF50" />
     <meta name="description" content="Find your dream job with a simple swipe - Joby makes job searching fun and easy!" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
